// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlBar renders SwitchButton with PenMarker when props.currentMarker is PEN_MARKER 1`] = `
<div
  className="ControlBar"
>
  <Connect(SwitchButton) />
  <Connect(PenMarker) />
</div>
`;

exports[`ControlBar renders SwitchButton with PencilMarker when props.currentMarker is PENCIL_MARKER 1`] = `
<div
  className="ControlBar"
>
  <Connect(SwitchButton) />
  <Connect(PencilMarker) />
</div>
`;
